--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,14 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
 }
-
 .message-container{
+  margin: 5px 10px;
+}
+.message-body{
   display: flex;
 }
 
@@ -15,5 +16,10 @@ a {
   border-radius: 4px;
 }
 .comment-info{
+  margin-left: 5px;
+  font-size: 10px;
+  color: gray;
+}
+.comment-body{
   margin-left: 5px;
 }
